# serializer version: 1
# name: test_snapshots[rgb][switch.wled_rgb_light_nightlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_nightlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nightlight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nightlight',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nightlight',
    'unique_id': 'aabbccddeeff_nightlight',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_nightlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'duration': 60,
      'friendly_name': 'WLED RGB Light Nightlight',
      'target_brightness': 0,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_nightlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_reverse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_reverse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reverse',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reverse',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reverse',
    'unique_id': 'aabbccddeeff_reverse_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_reverse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Reverse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_reverse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_segment_1_reverse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_segment_1_reverse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Segment 1 reverse',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1 reverse',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'segment_reverse',
    'unique_id': 'aabbccddeeff_reverse_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_segment_1_reverse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Segment 1 reverse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_segment_1_reverse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_sync_receive-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_sync_receive',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sync receive',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sync receive',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sync_receive',
    'unique_id': 'aabbccddeeff_sync_receive',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_sync_receive-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Sync receive',
      'udp_port': 21324,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_sync_receive',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_sync_send-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_sync_send',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sync send',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sync send',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sync_send',
    'unique_id': 'aabbccddeeff_sync_send',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][switch.wled_rgb_light_sync_send-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Sync send',
      'udp_port': 21324,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_sync_send',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_nightlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_nightlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Nightlight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nightlight',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nightlight',
    'unique_id': 'aabbccddeeff_nightlight',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_nightlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'duration': 60,
      'friendly_name': 'WLED RGB Light Nightlight',
      'target_brightness': 0,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_nightlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_reverse-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_reverse',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Reverse',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reverse',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reverse',
    'unique_id': 'aabbccddeeff_reverse_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_reverse-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Reverse',
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_reverse',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_sync_receive-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_sync_receive',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sync receive',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sync receive',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sync_receive',
    'unique_id': 'aabbccddeeff_sync_receive',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_sync_receive-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Sync receive',
      'udp_port': 21324,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_sync_receive',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_sync_send-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.wled_rgb_light_sync_send',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sync send',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sync send',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sync_send',
    'unique_id': 'aabbccddeeff_sync_send',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][switch.wled_rgb_light_sync_send-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Sync send',
      'udp_port': 21324,
    }),
    'context': <ANY>,
    'entity_id': 'switch.wled_rgb_light_sync_send',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
